# UniversalAgentPlatform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .mise.toml  ARCHITECTURE.md  Makefile  README.md  Taskfile.yml  go.mod  go.sum  go.work  go.work.sum  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json  versions.env
.github/workflows/: ci.yml
apps/admin-web/: Dockerfile  next.config.ts  tailwind.config.ts  tsconfig.json
apps/chat-web/: Dockerfile  package.json  tailwind.config.ts
docs/: agent-workflows.md  api.md  deployment.md  external-api-usage.md  local-dev.md  perf-testing.md  runbooks.md  scaling.md  security.md  troubleshooting.md  ui-navigation.md
docs/adr/: 0001-service-boundaries.md  0002-triton-only-inference.md  0003-streaming-and-voice-transports.md  0004-data-plane.md  0005-keycloak-rbac.md  0006-helm-argocd.md  0007-local-profiles.md
docs/changes/: 2026-03-14_admin-agent-config-and-rag-bundles.md  2026-03-14_kubernetes-one-command-bootstrap.md  2026-03-14_monorepo-bootstrap.md  2026-03-14_runtime-bootstrap.md  2026-03-14_ui-cockpit-redesign.md  2026-03-15_agent-matrix-edge-and-perf-visibility.md  2026-03-15_cloud-k8s-api-scale-and-docs-hardening.md  2026-03-15_edge-agent-matrix-and-perf-hardening.md  2026-03-15_ws-first-streaming-and-agent-workflows.md
examples/rag-agent-bundle/: Dockerfile  README.md  install.py  manifest.json
infra/argocd/: platform-application.yaml
infra/caddy/: Caddyfile
scripts/: bootstrap-tools.sh  build-images.sh  k8s-down.sh  k8s-smoke.sh  k8s-up.sh  smoke.sh  verify-prereqs.sh
(+367 files in other folders)
