[project]
name = "universal-agent-platform"
version = "0.1.0"
description = "Enterprise agent platform monorepo"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.11.13",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "opentelemetry-api>=1.31.1",
  "opentelemetry-sdk>=1.31.1",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.39",
  "temporalio>=1.10.0",
  "uvicorn>=0.34.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["packages/py-common"]

[tool.ruff]
line-length = 100
